# colabora-app

./: .gitignore  README.md  main.py  mkdocs.yml  pyproject.toml  readme.txt  requirements.txt  todo
docs/: index.md
docs/architecture/: data-model.md  features.md  security.md
docs/cli/: admin.md  login.md  projects.md  register.md  user-screen.md
seeds/: habilities.json  organizations.json  projects.json  users.json
src/: __init__.py
src/cli/: view.py
src/exceptions/: __init__.py
src/models/: __init__.py  hability.py  organizations.py  projects.py  users.py
src/populate_db/: users.py
src/repositories/: __init__.py  base_repository.py  database.py  hability.py  organization.py  project.py  user.py  users.py
src/security/: __init__.py  password.py
src/tests/: conftest.py
src/tests/use_cases/: test_login.py  test_register.py  test_replace_password.py  test_update_user.py
src/tests/validators/: test_email_validator.py  test_password_validator.py
src/tui/: admin.py  login.py  project.py  register.py  user.py
src/tui/css/: styles.css
src/use_cases/: __init__.py  login.py  register.py  replace_password.py  test_login.py  update_project.py  update_user.py
src/validators/: __init__.py  email.py  password.py
