[project]
name = "colabora"
version = "0.0.1"
description = "Um programa de terminal que conectar projetos a pessoas especializadas"
authors = [
    {name = "Elias Moura",email = "elias.smourayt@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">3.11,<4.0"
dependencies = [
    "textual[dev] (>=6.6.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
alint = "blue .; isort ."
lint = "blue --check --diff . && isort --check --diff ."
docs = "mkdocs serve"
pre_test = "task lint"
test = "pytest -s -x --cov=src -vv"
post_test = "coverage html"

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "blue (>=0.9.1,<0.10.0)",
    "isort (>=7.0.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]

doc = [
    "mkdocs-material (>=9.7.0,<10.0.0)",
    "mkdocstrings (>=0.30.1,<0.31.0)",
    "mkdocstrings-python (>=1.19.0,<2.0.0)"
]
